[package]
name = "rustos"
version = "0.1.4"
authors = ["Keith Noguchi <keith.noguchi@gmail.com>"]

[dependencies]
bootloader = "0"
lazy_static = {version = "1", features = ["spin_no_std"]}
spin = "0"
uart_16550 = "0.2"
volatile = "0.2"
x86_64 = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33	# (0x10 << 1) | 1
test-timeout = 30		# secs
