[package]
name = "rustos"
version = "0.4.0"
authors = ["Keith Noguchi <keith.noguchi@gmail.com>"]
edition = "2018"
keywords = ["kernel", "embedded", "no_std", "x86"]
license = "Apache-2.0 OR MIT"
description = "Writing an OS in Rust"
readme = "README.md"
repository = "https://github.com/keithnoguchi/rustos"
categories = ["os", "embedded", "emulators"]

[dependencies]
bootloader = {version = "0", features = ["map_physical_memory"]}
lazy_static = {version = "1", features = ["spin_no_std"]}
linked_list_allocator = "0"
pc-keyboard = "0"
pic8259_simple = "0"
spin = "0"
uart_16550 = "0.2"
volatile = "0.2"
x86_64 = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33	# (0x10 << 1) | 1
test-timeout = 30		# secs
